# conch

./: .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LLVM.zig  Makefile  README.md  build.zig  build.zig.zon  coverage_summary.txt  flake.nix  index.html  index.js
.github/: CMakeLists.txt  coverage_badge.sh  coverage_report.sh
.github/workflows/: ci.yml  coverage.yml  format.yml  package.yml
apps/compressor/: main.zig
conch_tests.2c2ac752/: codecov.json  cov.xml  coverage.db  coverage.json  index.js  lexer.cpp.37c0f3b4.js  sonarqube.xml  summary.db
conch_tests.2c2ac752/metadata/: 37c0f3b4
doc/: README.md
doc/syntax/: arrays.md  declarations.md  functions.md  structs.md
examples/: structs.ch
include/: core.hpp  welcome.h
include.c/evaluate/: program.h
include.c/parser/: parser.h
include.c/semantic/: type.h
include.c/util/: arena.h  memory.h
include/ast/: ast.h  node.h  node.hpp
include/cli/: program.hpp
include/evaluate/: program.h  repl.h
include/lexer/: keywords.h  keywords.hpp  lexer.h  lexer.hpp  operators.h  operators.hpp  token.h  token.hpp
include/nodes/: node.hpp
include/parser/: expression_parsers.h  parser.h  parser.hpp  precedence.h  precedence.hpp  statement_parsers.h
include/semantic/: analyzer.h  context.h  symbol.h  type.h
include/token/: token.h
include/util/: allocator.h  alphanum.h  arena.h  common.hpp  diagnostic.hpp  enum.hpp  error.h  expected.hpp  functional.hpp  hash.h  hash_map.h  io.h  math.h  mem.h  memory.h  optional.hpp  status.h
include/visitor/: visitor.hpp
merged/: index.js
merged/kcov-merged/: array.cpp.23c30477.html  array.cpp.23c30477.js  array.hpp.7b229040.html  array.hpp.7b229040.js  block.cpp.79ae3e8d.html  block.cpp.79ae3e8d.js  block.hpp.1fd72e9a.html  block.hpp.1fd72e9a.js  call.cpp.8f21f6cf.html  call.cpp.8f21f6cf.js  call.hpp.e958e6d8.html  call.hpp.e958e6d8.js  codecov.json  cov.xml  coverage.json  declaration.cpp.2c7080ad.html  declaration.cpp.2c7080ad.js  declaration.hpp.862e0cb4.html  declaration.hpp.862e0cb4.js  defer.cpp.3bca0f11.html  defer.cpp.3bca0f11.js  defer.hpp.5db31f06.html  defer.hpp.5db31f06.js  discard.cpp.6d69063e.html  discard.cpp.6d69063e.js  discard.hpp.ed82a45.html  discard.hpp.ed82a45.js  do_while.cpp.26d469ea.html  do_while.cpp.26d469ea.js  do_while.hpp.a3421875.html  do_while.hpp.a3421875.js  dumper.cpp.67e344f8.html  dumper.cpp.67e344f8.js  dumper.hpp.31ac0158.html  dumper.hpp.31ac0158.js  enum.cpp.a6bff542.html  enum.cpp.a6bff542.js  enum.hpp.c0c6e555.html  enum.hpp.c0c6e555.js  expression.cpp.d1130b.html  (+106 more)
merged/merged-kcov-output/: coverage.db
old/: CMakeLists.txt
old/src/: main.c
src/: main.c  main.cpp  welcome.c
src.c/parser/: parser.c
src.c/semantic/: context.c
src.c/util/: memory.c
src/ast/: ast.c
src/cli/: program.cpp
src/evaluate/: program.c  repl.c
src/lexer/: lexer.c  lexer.cpp  token.c  token.cpp
src/parser/: expression_parsers.c  parser.c  parser.cpp  statement_parsers.c
src/semantic/: analyzer.c  context.c  symbol.c  type.c
src/util/: alphanum.c  arena.c  array_list.c  hash.c  hash_map.c  io.c  math.c  mem.c  memory.c  status.c
tests/: main.zig  runner.zig  test_core.cpp  test_lexer.cpp  test_token.cpp  test_welcome.cpp
tests.1c4fb9d6/: codecov.json  cov.xml  coverage.db  coverage.json  diagnostic.hpp.5d934baa.js  enum.hpp.6bb1e107.js  index.js  keywords.hpp.33802462.html  keywords.hpp.33802462.js  lexer.cpp.37c0f3b4.html  lexer.cpp.37c0f3b4.js  lexer.hpp.b00b7702.js  operators.hpp.9c70d8ca.js  parser.hpp.2e7c6d1f.js  sonarqube.xml  summary.db  token.cpp.423ef3c5.html  token.cpp.423ef3c5.js  token.hpp.c5f57773.html  token.hpp.c5f57773.js
tests.1c4fb9d6/metadata/: 2e7c6d1f  33802462  37c0f3b4  423ef3c5  5d934baa  6bb1e107  9c70d8ca  b00b7702  c5f57773
tests.4239b673/: array.cpp.ff650527.html  array.cpp.ff650527.js  array.hpp.c6d57045.html  array.hpp.c6d57045.js  assignment.hpp.17213ee.html  assignment.hpp.17213ee.js  binary.hpp.267fab24.html  binary.hpp.267fab24.js  block.cpp.9a2a1a3.html  block.cpp.9a2a1a3.js  block.hpp.55c5376a.html  block.hpp.55c5376a.js  call.cpp.ff2d69e1.html  call.cpp.ff2d69e1.js  call.hpp.a34aff28.html  call.hpp.a34aff28.js  cobertura.xml  codecov.json  common.hpp.6137dd07.html  common.hpp.6137dd07.js  coverage.db  coverage.json  decl.cpp.88514aa.html  decl.cpp.88514aa.js  decl.hpp.33d8ef3b.html  decl.hpp.33d8ef3b.js  diagnostic.hpp.5d934baa.html  diagnostic.hpp.5d934baa.js  discard.cpp.6def1cb.html  discard.cpp.6def1cb.js  discard.hpp.7e0f292a.html  discard.hpp.7e0f292a.js  do_while.cpp.6cc6701a.html  do_while.cpp.6cc6701a.js  enum.hpp.6bb1e107.js  expression.cpp.bd26f30e.html  expression.cpp.bd26f30e.js  expression.hpp.cba1fb96.html  expression.hpp.cba1fb96.js  for.cpp.b23b490c.html  (+72 more)
tests.4239b673/metadata/: 017213ee  05fa512e  06def1cb  088514aa  09a2a1a3  0db37a23  14bbe539  15a7dd5b  16d18a21  2415cc09  267fab24  2691d63d  2e7c6d1f  3162045a  33802462  33d8ef3b  37c0f3b4  3921c2bd  3b036de2  423ef3c5  43d2b503  55c5376a  5d934baa  605682b9  60e9ef6a  611571f5  6137dd07  6bb1e107  6cc6701a  729b571d  757a03dd  7e0f292a  98fdeaf8  9c70d8ca  9fdc078c  a14d9f9a  a34aff28  a46623eb  b00b7702  b193b256  (+16 more)
tests.a4e4543a/: cobertura.xml  codecov.json  coverage.db  coverage.json  diagnostic.hpp.5d934baa.js  enum.hpp.6bb1e107.html  enum.hpp.6bb1e107.js  index.js  keywords.hpp.33802462.js  lexer.cpp.37c0f3b4.js  lexer.hpp.b00b7702.html  lexer.hpp.b00b7702.js  operators.hpp.9c70d8ca.html  operators.hpp.9c70d8ca.js  parser.hpp.2e7c6d1f.js  sonarqube.xml  summary.db  token.cpp.423ef3c5.js  token.hpp.c5f57773.js
tests.a4e4543a/metadata/: 2e7c6d1f  33802462  37c0f3b4  423ef3c5  5d934baa  6bb1e107  9c70d8ca  b00b7702  c5f57773
tests.c/helpers/: file_io.cpp
tests.c/semantic/: test_semantic.cpp
tests/ast/: test_ast.cpp  test_declarations.cpp  test_primitives.cpp
tests/evaluate/: test_repl.cpp
tests/helpers/: ast_nodes.cpp  ast_nodes.hpp  file_helpers.cpp  file_helpers.hpp  file_io.cpp  file_io.hpp  fixtures.cpp  fixtures.hpp  parser_helpers.cpp  (+5 more)
(+344 files in other folders)
